--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "touchmultiselect",
+  "name": "jquery-touch-multiselect",
   "version": "1.0.0",
   "title": "jQuery Touch Multiselect",
   "description": "jQuery plugin to have a touch-fitted multi select input field.",
